Fixed z-index for spinner and remove from lib buttons

--- a/src/sass/components/_card-movie.scss
+++ b/src/sass/components/_card-movie.scss
@@ -87,7 +87,7 @@
   padding: 0;
   width: 30px;
   height: 30px;
-  z-index: 2;
+  z-index: 1;
   transition: createTransitionFor('color', 'box-shadow');
 
   color: rgb(26, 206, 71);
